# frb-shopping-list

./: .gitignore  open_workspace.sh
shopping_list_backend/: Cargo.toml  start_server.sh
shopping_list_backend/certs/: 172.19.1.128-key.pem  172.19.1.128.pem  cert.pem  key.pem
shopping_list_backend/src/: main.rs
shopping_list_frontend/: pubspec.yaml
shopping_list_frontend/integration_test/: simple_test.dart
shopping_list_frontend/ios/Runner/: Info.plist
shopping_list_frontend/ios/Runner.xcodeproj/: project.pbxproj
shopping_list_frontend/lib/: main.dart
shopping_list_frontend/lib/Screens/: main_page.dart
shopping_list_frontend/lib/Widgets/: alert_dialog.dart  item_card.dart  refresh_floating_button.dart  text_field.dart
shopping_list_frontend/linux/: CMakeLists.txt  my_application.cc
shopping_list_frontend/linux/flutter/: generated_plugins.cmake
shopping_list_frontend/macos/Runner.xcodeproj/: project.pbxproj
shopping_list_frontend/rust/: Cargo.toml
shopping_list_frontend/rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
shopping_list_frontend/rust/src/api/: communication.rs  item_model.rs  mod.rs
shopping_list_frontend/rust_builder/: pubspec.yaml
shopping_list_frontend/rust_builder/android/: build.gradle  settings.gradle
shopping_list_frontend/rust_builder/ios/: rust_lib_shopping_list_frontend.podspec
shopping_list_frontend/rust_builder/linux/: CMakeLists.txt
shopping_list_frontend/rust_builder/windows/: CMakeLists.txt
shopping_list_frontend/web/: index.html
shopping_list_frontend/windows/: CMakeLists.txt
(+13 files in other folders)
