[package]
name = "shopping_list_backend"
version = "0.1.0"
edition = "2021"

[dependencies] 
axum = "0.7.5"
bson = "2.10.0"
futures = "0.3.30"
mongodb = "2.8.2"
reqwest = "=0.12.4"
serde_json = "1.0.117"
tokio = "1.37.0"
hyper = {version = "0.14", features = ["full"]  }
tower = "0.4"   
tower-http = { version = "0.5.2", features = ["cors", "fs", "set-header"] }
axum-helmet = "0.1"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
native-tls = "0.2"
axum-server = {version  = "0.6.0", features = ["tls-rustls"]}