[package]
name = "rust_lib_shopping_list_frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.38"
reqwest = { version = "0.12.4", features = ["rustls-tls"] } 


serde = { version ="1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[target.'cfg(target_os="android")'.dependencies]
openssl-sys = "0.9.102"
openssl = { version = "0.10", features = [ "vendored" ] }

[dev-dependencies]
wasm-bindgen-test = "0.2"
